--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,9 @@
       ],
       "@/products/*": [
         "./src/app/products/*"
+      ],
+      "@/shared/*": [
+        "./src/app/shared/*"
       ]
     },
     "strict": true,
