feat: add create and update

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,10 @@
       ],
       "@/shared/*": [
         "./src/app/shared/*"
-      ]
+      ],
+      "@utils/*": [
+        "./src/app/utils/*"
+      ],
     },
     "strict": true,
     "noImplicitOverride": true,
